VZDEV/src/objects/CCPM_RuleAction__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_RE_Rule_Action_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Rule Action ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_action__c</fullName>
        <label>Action</label>
        <referenceTo>CCPM_Action__c</referenceTo>
        <relationshipLabel>RE Rule Actions</relationshipLabel>
        <relationshipName>CCPM_RERuleActions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_rule__c</fullName>
        <label>Rule</label>
        <referenceTo>CCPM_Rule__c</referenceTo>
        <relationshipLabel>RE Rule Actions</relationshipLabel>
        <relationshipName>CCPM_RERuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RE Rule Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA{00000}</displayFormat>
        <label>Rule Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>